修改 盛景 学习计划 计划人数问题

--- a/weapp/apps/customerized_apps/shengjing/templates/webapp/study_plan.html
+++ b/weapp/apps/customerized_apps/shengjing/templates/webapp/study_plan.html
@@ -288,12 +288,12 @@
 	<div class="ui-info">
 		<label>开课时间：</label>${start_date} - ${end_date}
 	</div>
-	{{if plan_count > 0 && status != '0'}}
+	{{if plan_count > 0}}
 		<div class="ui-info" onclick="showInfo(this);" type="show">
 			<label>计划人数：</label>${plan_count}
 			<span class="xui-arrow xui-arrow-down ua-arrow" ></span>
 		</div>
-		{{if students.length > 0 }}
+		{{if students && students.length > 0 }}
 			<div class="hidden xui-info xa-info">
 				<label>计划人：</label>
 				{{each(i,value) students}}
