--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -8,7 +8,7 @@
                 <p class="xa-title">{{component.model.title}}</p>
             </h1>
         </div>
-        <div class="wui-i-roulette wui-i-header xa-header">
+        <div class="wui-i-roulette wui-i-header xa-header {% if component.model.limitation == 'no_limit' %}wui-lotterydescription-hide{% endif %}">
             <p>您还有<b>
                 {% if component.model.limitation == 'once_per_user' %}1{% endif %}
                 {% if component.model.limitation == 'once_per_day' %}1{% endif %}
