fix lottery bug

--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -187,7 +187,7 @@
                             tel: tel
                         },
                         success: function(data){
-                            that.$title.css('visibility','hidden');
+                            that.$title.hide();
                             that.$entityContent.hide();
                             that.$contentHeader.html('工作人员会尽快与您联系，<br>请保持手机开机~');
                             that.$userCenter.show();
