--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -575,7 +575,7 @@
 										{{/if}}
 									</div>
 									{{if dynamicComponentField.help}}
-									<div style="color: #656565;">
+									<div style="color: #656565;position:absolute;">
 										{{html dynamicComponentField.help.replace(/\n/g, "<br/>")}}
 									</div>
 									{{/if}}
