--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_log.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/integral_log.html
@@ -176,7 +176,7 @@
                                 <p class="xui-zoom fl">
                                     <span class=" xui-username">{{log.event_type}}</span>
                                     <br/>
-                                    <span class=" xui-type">{{log.name}}</span>
+                                    <span class=" xui-type">{{html log.name}}</span>
                                 </p>
                                 {% else %}
                                 <p class="xui-zoom fl">
