--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -267,13 +267,13 @@
 		<tr>
 			<th >会员</th>
 			<th >会员等级</th>
-			<th  class="tx_sortable xui-Blue" style="width:8%" data-sort-attr='friend_count' >好友数</th>
-			<th  class="tx_sortable xui-Blue" style="width:8%" data-sort-attr='integral' >积分</th>
-			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_money' >消费总额</th>
-			<th  class="tx_sortable xui-Blue" style="width:9%" data-sort-attr='unit_price' >客单价</th>
-			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_times' >购买次数</th>
+			<th  class="tx_sortable xui-Blue" style="width:8%" data-sort-attr='friend_count' data-sort-direction="up">好友数</th>
+			<th  class="tx_sortable xui-Blue" style="width:8%" data-sort-attr='integral' data-sort-direction="up">积分</th>
+			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_money' data-sort-direction="up">消费总额</th>
+			<th  class="tx_sortable xui-Blue" style="width:9%" data-sort-attr='unit_price' data-sort-direction="up">客单价</th>
+			<th  class="tx_sortable xui-Blue" style="width:10%" data-sort-attr='pay_times' data-sort-direction="up">购买次数</th>
 
-			<th  class="tx_sortable xui-Blue" style="width:14%" data-sort-attr='created_at' data-init-sort="-created_at"  data-sort-direction="down">关注时间&来源 </th>
+			<th  class="tx_sortable xui-Blue" style="width:14%" data-sort-attr='created_at' data-init-sort="-created_at"  data-sort-direction="up">关注时间&来源 </th>
 			<th  style="width:10%">分组</th>
 
 			<th class="" style="width:10%">
@@ -596,14 +596,10 @@ $(document).ready(function() {
 			var member_ids = [];
 			W.getApi().call({
 	            app: 'member' ,
-	            api: 'members/get',
+	            api: 'member_ids/get',
 	            args: args,
 	            success: function(data){
-	                for(var i=0; i<data.items.length; ++i){
-	                	if(data.items[i].is_subscribed){
-	                    	member_ids.push(data.items[i].id);
-	                	}
-	                }
+	                member_ids = data.member_ids;
 	                if(member_ids.length == 0){
 	                	W.showHint('error', '请先选择会员！');
 			  			return;
