--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -57,7 +57,7 @@
                             <p class="em85 xui-hintNum pa">{{ member.not_payed_order_count }}</p>
                         {% endif %}
                     </i>
-                    <p class="em7">待付款</p>
+                    <p class="em7">待支付</p>
                 </a>
                 <a class="xui-fastBtnInner disTc tc xui-oneThird" href="./?woid={{request.webapp_owner_id}}&module=mall&model=order_list&action=get&member_id={{member.id}}&workspace_id=mall&type=3">
                     <i class="pr">
