--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -90,7 +90,9 @@
 						   	</a>
 						   	<ul class="dropdown-menu xui-dropbox" style="{% if user_tags|length == 0 %} display:none; {% endif %} ">
 						   		{% for tag in user_tags %}
-						   		<li><a href="javascript:void(0);"  data-status="selected"  class="update-tag" data-id="{{tag.id}}">{{tag.name}}</a></li>
+						   			{% if tag.name != '未分组' %}
+							   			<li><a  href="javascript:void(0);" data-status="all"  class="update-tag" data-id="{{tag.id}}">{{tag.name}}</a></li>
+							   		{% endif %}
 						   		{% endfor %}
 						   	</ul>
 					    </li>
@@ -100,8 +102,10 @@
 						   	</a>
 						   	<ul class="dropdown-menu xui-dropbox" style="{% if user_tags|length == 0 %} display:none; {% endif %} ">
 						   		{% for tag in user_tags %}
-						   		<li><a href="javascript:void(0);" class="update-tag" data-id="{{tag.id}}" data-status="all">{{tag.name}}</a></li>
-						   		{% endfor %}
+						   			{% if tag.name != '未分组' %}
+							   			<li><a  href="javascript:void(0);" data-status="all"  class="update-tag" data-id="{{tag.id}}">{{tag.name}}</a></li>
+							   		{% endif %}
+							   	{% endfor %}
 						   	</ul>
 					    </li>
 					</ul>
@@ -203,7 +207,9 @@
 						   	</a>
 						   	<ul class="dropdown-menu xui-dropbox" style="{% if user_tags|length == 0 %} display:none; {% endif %} ">
 						   		{% for tag in user_tags %}
-						   		<li><a href="javascript:void(0);" data-status="selected" class="update-tag" data-id="{{tag.id}}">{{tag.name}}</a></li>
+						   			{% if tag.name != '未分组' %}
+							   			<li><a  href="javascript:void(0);" data-status="all"  class="update-tag" data-id="{{tag.id}}">{{tag.name}}</a></li>
+							   		{% endif %}
 						   		{% endfor %}
 						   	</ul>
 					    </li>
@@ -213,7 +219,9 @@
 						   	</a>
 						   	<ul class="dropdown-menu xui-dropbox" style="{% if user_tags|length == 0 %} display:none; {% endif %} ">
 						   		{% for tag in user_tags %}
-						   		<li><a  href="javascript:void(0);" data-status="all"  class="update-tag" data-id="{{tag.id}}">{{tag.name}}</a></li>
+							   		{% if tag.name != '未分组' %}
+							   			<li><a  href="javascript:void(0);" data-status="all"  class="update-tag" data-id="{{tag.id}}">{{tag.name}}</a></li>
+							   		{% endif %}
 						   		{% endfor %}
 						   	</ul>
 					    </li>
@@ -333,10 +341,10 @@
 				{{if member.source == 2}}<div class="xui-fromShare">会员分享</div>{{/if}}
 			</td>
 			<td>
-				<div class="centerAlign auto_wrap_no_flow" >
+				<div class="centerAlign auto_wrap_no_flow">
 					{{each(i,tag) tags}}
-			          ${tag.name}
-			         {{/each}}
+			           <span class="xa-tag-name" data-tag-id="${tag.id}">${tag.name}</span>
+			        {{/each}}
 			    </div>
 			</td>
 
@@ -428,6 +436,12 @@ $(document).ready(function() {
 	$('body').delegate('.xa-update-tag', 'click', function(event){
 		var $el = $(event.currentTarget);
 		var member_id = $el.attr('data-id');
+		var tag_names = $($el).parents('tr').find('.xa-tag-name');
+		var tag_ids = []
+		for(var i = 0; i < tag_names.length; i++){
+			var id = $(tag_names[i]).data('tag-id');
+			tag_ids.push(id);
+		}
 		var dataView = $('[data-ui-role="advanced-table"]').data('view')
 		dataView.setPage(1);
 		dataView.args = view.getFilterValue();
@@ -442,6 +456,7 @@ $(document).ready(function() {
 			$action: $el,
 			isUpdateGrade: false,
 			memberId: member_id,
+			tagIds: tag_ids,
 			isPostData: true,
 			dataView:dataView
 
@@ -456,7 +471,6 @@ $(document).ready(function() {
 		var status = $(this).attr('data-status');
 
 	 	$('input.xa-select:checked').each(function(){
-    		console.log($(this).parent().parent().attr('data-id'))
     		post_ids.push($(this).parent().parent().attr('data-id'))
   		});
 	 	var dataView = $('[data-ui-role="advanced-table"]').data('view')
@@ -496,7 +510,6 @@ $(document).ready(function() {
 		var tag_id = $(this).attr('data-id');
 		var status = $(this).attr('data-status');
 	 	$('input.xa-select:checked').each(function(){
-    		console.log($(this).parent().parent().attr('data-id'))
     		post_ids.push($(this).parent().parent().attr('data-id'))
   			});
 	 	var dataView = $('[data-ui-role="advanced-table"]').data('view')
@@ -706,7 +719,6 @@ $(document).ready(function() {
 	$('.panel').delegate('.relation-text', 'click', function(event) {
 					var _this = this;
 					var $el = $(event.currentTarget);
-					console.log($el);
 
 					var friend_count = $el.attr('friend_count');
 					var fans_count = $el.attr('fans_count');
