--- a/weapp/static_v2/js/view/member_update_tag/template.html
+++ b/weapp/static_v2/js/view/member_update_tag/template.html
@@ -1,7 +1,7 @@
 <script id="member-update-tag-dialog-tmpl-src" type="text/x-jquery-tmpl">
 
 		<div class="xa-i-content clearfix p5">
-	
+
 		</div>
 		<div class="tc" style="padding:7px 0 10px 0;background:#eaeef7;border-radius:0 0 4px 4px;">
 			<div class="xa-order-ship-info">
@@ -15,14 +15,16 @@
 <script id="tags-tmpl-src" type="text/x-jquery-tmpl">
 		<ul>
 			{{each(i,tag) tags}}
-			<li class="fl ml15 mt5 checkbox">
-			<label class="auto_wrap_no_flow">
-				<input type="checkbox" name="tag_id" value="${tag.id}" data-value="${tag.name}"> ${tag.name}
+			{{if tag.name != '未分组' }}
+				<li class="fl ml15 mt5 checkbox">
+				<label class="auto_wrap_no_flow">
+					<input type="checkbox" name="tag_id" value="${tag.id}" data-value="${tag.name}" {{if tag.in_this_tag}}checked{{/if}}> ${tag.name}
+			{{/if}}
 			</label>
 			</li>
 			{{/each}}
 		</ul>
-		
+
 </script>
 
 <script id="grade-tmpl-src" type="text/x-jquery-tmpl">
