mod 微站选择去掉‘用户反馈’

--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -13,9 +13,9 @@
     {{if channel_qrcode}}
     <li><a href="javascript:void(0);" class="xa-linkItemMenu" data-type="channelQrcode">代言人二维码</a></li>
     {{/if}}
-    {{if complain}}
+    <!--{{if complain}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="complain">用户反馈</a></li>
-    {{/if}}
+    {{/if}}-->
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="myOrder">我的订单</a></li>
     {{if shengjing}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="shengjingCustom">盛景定制APP</a></li>
