--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
@@ -309,6 +309,7 @@
         <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}&v=2.0">测试物流v2</a>
         <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}&is_finish=success">测试快递已收货v1</a>
         <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}&v=2.0&is_finish=success">测试快递已收货v2</a>
+        <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}&v=2.0&is_finish=abort">测试已关闭</a>
     {% endif %}
 </div>
 
