--- a/weapp/termite/static/termite_js/app/component/appkit/uploadimg/uploadimg.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/uploadimg/uploadimg.html
@@ -9,7 +9,16 @@
 >
 	<h1 class="wui-i-title">{{component.model.title}} {% if component.model.is_mandatory == "true" %}<span class="wui-i-mandatory">(必填)</span>{% endif %}</h1>
 	<div class="wui-i-uploadimg" data-input-name="{{component.model.title}}" data-control-type="appkit.uploadimg">
-		<p class="pt10 pl50">最多可上传5张图片</p>
+		<div class="xui-productPhoto mt10">
+			<div class="xui-addPhoto mb10 fl pr">
+				<span class="xui-i-box"></span>
+				<input id="" name="imgFile123"  data-ui-role="uploadImage" type="file" style="opacity:0;top:0;left:0;width:45px;height:45px;" class="pa">
+			</div>
+			<div class="xui-deletePhoto xa-deletePhoto" style="display:none;">
+			</div>
+			<span class="cRed em95 none xa-finishEdit xui-finishEdit ml10">完成</span>
+			<span class="em75 xa-text xui-text">最多可上传5张图片</span>
+        </div>
 	</div>
 </div>
 {% endifequal %}
