--- a/weapp/apps/customerized_apps/survey/templates/webapp/m_survey.html
+++ b/weapp/apps/customerized_apps/survey/templates/webapp/m_survey.html
@@ -54,6 +54,12 @@
 <script type="text/javascript">
 	W.pageId = "{{request.GET.page_id}}";
 	$(document).ready(function() {
+		var picture_list = [];
+		$('.xui-uploadImage img').each(function(){
+           if($(this).attr('src').indexOf('data:image') != -1){picture_list.push($(this).attr('src'))}
+        });
+		console.log('1111');
+		console.log(picture_list);
 		$('.xa-join').click(function(event) {
 			event.stopPropagation();
 			event.preventDefault();
